<resources>

    <string name="app_name">Scyzoryk Drużynowego</string>
    <string name="prompt_username">Login</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_login">Zaloguj</string>
    <string name="action_logout">Wyloguj</string>
    <string name="login">LOGOWANIE</string>
    <string name="remember_me">Zapamiętaj mnie</string>
    <string name="registration">REJESTRACJA</string>
    <string name="register">Zarejestruj</string>
    <string name="no_account_question">Nie masz jeszcze konta?</string>
    <string name="account_question">Masz już konto?</string>
    <string name="title_activity_main">Main activity</string>
    <string name="prompt_repeat_password">Powtórz hasło</string>
    <string name="people">Członkowie</string>
    <string name="stamps">Sprawności</string>
    <string name="meetings">Zbiórki</string>
    <string name="blank_team">Zastęp: %s</string>
    <string name="blank_rank">Stopień: %s</string>
    <string name="choose">Wybierz</string>
    <string name="choice">Wybór opcji</string>
    <string name="new_team">Nowy zastęp</string>
    <string name="or">lub</string>
    <string name="new_person">Nową osobę</string>
    <string name="type_data">Wprowadź dane</string>
    <string name="complete_data">Uzupełnienie danych</string>
    <string name="data">Dane</string>
    <string name="team_name">Nazwa zastępu</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="birthday_date">Data urodzenia</string>
    <string name="confirm">Zatwierdź</string>
    <string name="scout_rank">Stopień</string>
    <string name="scout_function">Funkcja</string>
    <string name="scout_team">Zastęp</string>
    <string name="error">Błąd</string>
    <string name="enter_all_data">Uzupełnij wszystkie pola!</string>
    <string name="double_login">Podany login już istnieje!</string>
    <string name="double_team_name">Podana nazwa zastępu jest już zajęta</string>
    <string name="incorrect_second_password">Niepoprawnie powtórzone hasło!</string>
    <string name="registration_completed">Zarejestrowano!</string>
    <string name="incorrect_login">Nie ma takiego loginu!</string>
    <string name="incorrect_password">Niepoprawne hasło!</string>
    <string name="add">Dodaj</string>
    <string name="required_error">To pole jest wymagane</string>
    <string name="added_new_team_completed">Dodano nowy zastęp!</string>
    <string name="added_new_person_completed">Dodano nowego członka drużyny!</string>
    <string name="date_format_error">Niepoprawny format daty</string>
    <string name="position">%d.</string>
    <string name="search">Szukaj</string>
    <string name="more">Więcej</string>
    <string name="menu">Menu</string>
    <string name="exit">Wyjdź</string>
    <string name="are_you_sure_title">Jesteś pewien?</string>
    <string name="are_you_sure_close_app_description">Czy na pewno chcesz wyjść z aplikacji?</string>
    <string name="are_you_sure_logout_description">Czy na pewno chcesz się wylogować?</string>
    <string name="are_you_sure_remove_person_description">Czy na pewno chcesz usunąć tę osobę?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="edit">Edytuj</string>
    <string name="blank">-</string>
    <string name="person_data_key">person_key</string>
    <string name="person_data">Dane członka drużyny</string>
    <string name="age">lat</string>
    <string name="no_function">Bez funkcji</string>
    <string name="person_view">Podgląd osoby</string>
    <string name="team_view">Podgląd zastępu</string>
    <string name="update_finished">Zaktualizowano dane</string>
    <string name="person_removed">Usunięto osobę: %s %s</string>
    <string name="delete">Usuń</string>
    <string name="more_image_button_description">Przycisk rozwijający i zwijający listę osób w zastępie</string>
    <string name="stamp_icon_description">Logo sprawności</string>
    <string name="add_new_person">Dodaj harcerza</string>
    <string name="add_new_team">Dodaj zastęp</string>
    <string name="stamp_task_icon_description">Punktor dla zadania sprawności</string>
    <string name="blank_level">Poziom: %s</string>
    <string name="ERROR_INVALID_EMAIL">Niepoprawny email!</string>
    <string name="ERROR_WRONG_PASSWORD">Niepoprawne hasło!</string>
    <string name="ERROR_EMAIL_ALREADY_IN_USE">Taki email już istnieje!</string>
    <string name="ERROR_USER_NOT_FOUND">Taki email nie istnieje!</string>
    <string name="ERROR_WEAK_PASSWORD">Hasło musi posiadać przynajmniej 6 znaków!</string>
    <string name="ERROR">Coś poszło nie tak.</string>
    <string name="app_logo_description">App logo</string>
    <string name="ERROR_DIFFERENT_PASSWORDS">Hasła nie są takie same!</string>
    <string name="ERROR_BLANK_INPUTS">Uzupełnij wszystkie pola!</string>
</resources>