<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_people">

    <fragment
        android:id="@+id/navigation_people"
        android:name="pl.sokols.scyzorykdruzynowego.ui.people.PeopleFragment"
        android:label="@string/people"
        tools:layout="@layout/fragment_people">
        <action
            android:id="@+id/action_people_to_select"
            app:destination="@id/selectCreateTeamOrScoutFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_people_to_edit_person"
            app:destination="@id/editPersonFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_todo"
        android:name="pl.sokols.scyzorykdruzynowego.ui.todo.TodoFragment"
        android:label="@string/to_do_list"
        tools:layout="@layout/fragment_todo" />

    <fragment
        android:id="@+id/navigation_meetings"
        android:name="pl.sokols.scyzorykdruzynowego.ui.meetings.MeetingsFragment"
        android:label="@string/meetings"
        tools:layout="@layout/fragment_meetings" />

    <fragment
        android:id="@+id/selectCreateTeamOrScoutFragment"
        android:name="pl.sokols.scyzorykdruzynowego.ui.selectpersonteam.SelectPersonTeamFragment"
        android:label="@string/choice"
        tools:layout="@layout/fragment_select_person_team">
        <action
            android:id="@+id/action_select_to_new_team"
            app:destination="@id/createNewTeamFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_select_to_new_person"
            app:destination="@id/createNewPersonFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_out" >
            <argument
                android:name="isCreatePerson"
                android:defaultValue="true" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/createNewTeamFragment"
        android:name="pl.sokols.scyzorykdruzynowego.ui.createteam.CreateTeamFragment"
        android:label="@string/data"
        tools:layout="@layout/fragment_create_team">
        <action
            android:id="@+id/action_new_team_to_people"
            app:destination="@id/navigation_people"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_out"
            app:popUpTo="@id/navigation_people"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/createNewPersonFragment"
        android:name="pl.sokols.scyzorykdruzynowego.ui.createperson.CreatePersonFragment"
        android:label="@string/data"
        tools:layout="@layout/fragment_create_person">
        <argument android:name="person"
            app:argType="pl.sokols.scyzorykdruzynowego.data.entity.Person"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_new_person_to_people"
            app:destination="@id/navigation_people"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_out"
            app:popUpTo="@id/navigation_people"
            app:popUpToInclusive="true">
            <argument
                android:name="person"
                app:argType="pl.sokols.scyzorykdruzynowego.data.entity.Person" />
        </action>
        <argument
            android:name="isCreatePerson"
            app:argType="boolean"
            android:defaultValue="true" />
        <action
            android:id="@+id/action_create_person_to_edit_person"
            app:destination="@id/editPersonFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_out"
            app:popUpTo="@id/editPersonFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/editPersonFragment"
        android:name="pl.sokols.scyzorykdruzynowego.ui.editperson.EditPersonFragment"
        android:label="@string/person_view"
        tools:layout="@layout/fragment_edit_person">
        <argument android:name="person"
            app:argType="pl.sokols.scyzorykdruzynowego.data.entity.Person" />
        <action
            android:id="@+id/action_edit_person_to_create_person"
            app:destination="@id/createNewPersonFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_out">
            <argument
                android:name="isCreatePerson"
                android:defaultValue="false" />
        </action>
    </fragment>
</navigation>